# rust-native-expo-example

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  biome.json  cargo.toml  justfile  mise.toml  package-lock.json  package.json
.cargo/: config.toml
.github/workflows/: ci.yml
bins/server/: Cargo.toml
bins/server/src/: main.rs
crates/app-core/: Cargo.toml
crates/app-core/src/: lib.rs
crates/app-mobile/: Cargo.toml
crates/app-mobile/src/: lib.rs
crates/app-web/: Cargo.toml
crates/app-web/src/: lib.rs
crates/app-web/tests/: integration.rs
tools/uniffi-bindgen/: Cargo.toml
xtask/: Cargo.toml
xtask/src/: main.rs
