[workspace]
resolver = "3"
members = [
    "bins/server",
    "bins/uniffi-bindgen",
    "crates/app-core",
    "crates/app-mobile",
    "crates/app-web"
]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.93.1"

[workspace.dependencies]
app-core = { path = "crates/app-core" }
app-web = { path = "crates/app-web" }
anyhow = "1"
parking_lot = "0.12"
axum = "0.8.8"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uniffi = "0.31"

[workspace.lints.rust]
unsafe_code = "forbid"
unreachable_pub = "warn"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
must_use_candidate = "allow"
unwrap_used = "warn"
expect_used = "warn"
