[package]
name = "app-web"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
app-core = { workspace = true }
axum = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
reqwest = { version = "0.12", default-features = false, features = ["json"] }

[lints]
workspace = true
